<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/actionClear"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="Delete"
        android:showAsAction="always"
        android:orderInCategory="100"/>
    <item android:id="@+id/actionOpen"
        android:icon="@android:drawable/ic_menu_day"
        android:title="@string/open"
        android:showAsAction="always"
        android:orderInCategory="100"/>
    <item android:id="@+id/actionSave"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        android:showAsAction="always"
        android:orderInCategory="100"/>
    <item android:id="@+id/actionSettings"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/Settings"
        android:showAsAction="never"
        android:orderInCategory="100"/>
</menu>